[gd_scene load_steps=12 format=2]

[ext_resource path="res://sound/common/slash3.wav" type="AudioStream" id=1]
[ext_resource path="res://characters/swordandgun/projectiles/NewBullet.gd" type="Script" id=2]
[ext_resource path="res://framework/VariableSound2D.gd" type="Script" id=3]
[ext_resource path="res://mechanics/Hitbox.gd" type="Script" id=4]
[ext_resource path="res://characters/swordandgun/sounds/ricochet2.wav" type="AudioStream" id=5]
[ext_resource path="res://characters/swordandgun/sounds/ricochet3.wav" type="AudioStream" id=6]
[ext_resource path="res://characters/swordandgun/sounds/ricochet1.wav" type="AudioStream" id=7]
[ext_resource path="res://characters/swordandgun/sounds/ricochetnoise.wav" type="AudioStream" id=8]
[ext_resource path="res://characters/swordandgun/projectiles/states/NewBulletDefault.gd" type="Script" id=9]
[ext_resource path="res://projectile/BaseProjectile.tscn" type="PackedScene" id=10]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="NewBullet" instance=ExtResource( 10 )]
script = ExtResource( 2 )
max_fall_speed = "15"
extra_state_variables = "dir_x
dir_y
arc_x
arc_y
ricochet
speed
last_pos_visual
last_pos_visual_ricochet
last_hit_by
no_draw_ticks"
has_projectile_parry_window = false
deletes_other_projectiles = false
free_cancel_on_hit = false
projectile_immune = true
color = Color( 1, 0.486275, 0.121569, 1 )

[node name="Sprite" parent="Flip" index="0"]
frames = SubResource( 2 )

[node name="Ricochet1" type="AudioStreamPlayer2D" parent="Sounds" index="0"]
stream = ExtResource( 7 )
volume_db = -13.157
bus = "Fx"
script = ExtResource( 3 )

[node name="Ricochet2" type="AudioStreamPlayer2D" parent="Sounds" index="1"]
stream = ExtResource( 5 )
volume_db = -13.157
pitch_scale = 0.74
bus = "Fx"
script = ExtResource( 3 )

[node name="Ricochet3" type="AudioStreamPlayer2D" parent="Sounds" index="2"]
stream = ExtResource( 6 )
volume_db = -13.157
bus = "Fx"
script = ExtResource( 3 )

[node name="RicochetNoise" type="AudioStreamPlayer2D" parent="Sounds" index="3"]
stream = ExtResource( 8 )
volume_db = -8.0
bus = "Fx"
script = ExtResource( 3 )

[node name="CollisionBox" parent="." index="2"]
width = 1
height = 1

[node name="Hurtbox" parent="." index="3"]
width = 10
height = 10

[node name="Default" parent="StateMachine" index="0"]
script = ExtResource( 9 )
temporal = true

[node name="Hitbox" type="Node2D" parent="StateMachine/Default" index="0"]
z_index = 1000
script = ExtResource( 4 )
width = 4
height = 4
damage = 120
damage_in_combo = 82
minimum_damage = 30
chip_damage_modifier = "0.75"
hitstun_ticks = 18
hitlag_ticks = 6
victim_hitlag = 9
di_modifier = "0.7"
plus_frames = 2
hit_sound = ExtResource( 1 )
dir_y = "-0.25"
knockback = "12.0"
grounded_hit_state = "HurtAerial"
knockdown = true
knockdown_extends_hitstun = false
hard_knockdown = true
wall_slam = true
start_tick = 1
always_on = true

[node name="Hitbox3" type="Node2D" parent="StateMachine/Default" index="1"]
z_index = 1000
script = ExtResource( 4 )
width = 4
height = 4
damage = 120
damage_in_combo = 82
minimum_damage = 30
chip_damage_modifier = "0.75"
hitstun_ticks = 18
hitlag_ticks = 6
victim_hitlag = 9
di_modifier = "0.7"
plus_frames = 2
hit_sound = ExtResource( 1 )
dir_y = "-0.25"
knockback = "12.0"
grounded_hit_state = "HurtAerial"
knockdown = true
knockdown_extends_hitstun = false
hard_knockdown = true
wall_slam = true
start_tick = 1
always_on = true

[node name="Hitbox2" type="Node2D" parent="StateMachine/Default" index="2"]
z_index = 1000
script = ExtResource( 4 )
width = 4
height = 4
damage = 120
damage_in_combo = 82
minimum_damage = 30
chip_damage_modifier = "0.75"
hitstun_ticks = 18
hitlag_ticks = 6
victim_hitlag = 9
di_modifier = "0.7"
plus_frames = 2
hit_sound = ExtResource( 1 )
dir_y = "-0.25"
knockback = "12.0"
grounded_hit_state = "HurtAerial"
knockdown = true
knockdown_extends_hitstun = false
hard_knockdown = true
wall_slam = true
start_tick = 1
always_on = true
